<resources>
    <string name="app_name">Music Aid</string>

    <!-- Menu Items -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string-array name="activity_titles">
        <item>Transpose</item>
        <item>Metronome</item>
        <item>Tuner</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Activities -->
    <string name="title_activity_transpose">Transpose</string>
    <string name="title_activity_metronome">Metronome</string>
    <string name="title_activity_tuner">Tuner</string>

    <!-- About Information -->
    <string name="creator">Built by Matthew Frederick</string>
    <string name="email">mrmattfred@gmail.com</string>
    <string name="version">Version: </string>

    <!-- Button names -->
    <string name="ok">OK</string>

    <!-- Close app -->
    <string name="exit_dialog">Would you like to exit Music Aid?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>

    <!-- Transpose -->
    <string name="original_key">Original Key</string>
    <string name="new_key">New Key</string>
    <string name="to">to:</string>
    <string name="use_sharps">Use Sharps</string>
    <string name="use_flats">Use Flats</string>

    <string-array name="keys_array">
        <item>A</item>
        <item>A#/Bb</item>
        <item>B</item>
        <item>C</item>
        <item>C#/Db</item>
        <item>D</item>
        <item>D#/Eb</item>
        <item>E</item>
        <item>F</item>
        <item>F#/Gb</item>
        <item>G</item>
        <item>G#/Ab</item>
    </string-array>

    <string-array name="sharp_keys">
        <item>A</item>
        <item>A#</item>
        <item>B</item>
        <item>C</item>
        <item>C#</item>
        <item>D</item>
        <item>D#</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>G</item>
        <item>G#</item>
    </string-array>

    <string-array name="flat_keys">
        <item>A</item>
        <item>Bb</item>
        <item>B</item>
        <item>C</item>
        <item>Db</item>
        <item>D</item>
        <item>Eb</item>
        <item>E</item>
        <item>F</item>
        <item>Gb</item>
        <item>G</item>
        <item>Ab</item>
    </string-array>


    <!-- Metronome -->
    <string name="bt_plus">+</string>
    <string name="bt_minus">-</string>
    <string name="quarter">Quarter</string>
    <string name="eighth">Eighth</string>
    <string name="triplet">Triplet</string>
    <string name="sixteen">Sixteenth</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <!-- Tuner -->
    <string name="title"></string>
    <string name="e">E</string>
    <string name="a">A</string>
    <string name="d">D</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="e2">E</string>

</resources>
